[feature] Add header component and fix layout shift

--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,13 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
-
+.bg-marble {
+  background-color: rgb(0, 0, 0);
+  background-image: url(http://www.zingerbugimages.com/backgrounds/indigo_textured_rock_seamless_pattern.jpg);
+  background-position: top left;
+  background-repeat: repeat;
+  background-attachment: fixed;
+}
 /* .grid__layout {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
